new design proto

--- a/templates/_partials/filterbar/filter-bar.html
+++ b/templates/_partials/filterbar/filter-bar.html
@@ -2,134 +2,138 @@
 
 <div class="filters-fixed hidden-xs">
 
-  <div class="container">
+  <div class="bg-wrap">
 
-    <div class="row actions">
+    <div class="container extra">
 
-      <div class="col-md-12 filters">
+      <div class="row actions">
 
-        <span class="filter-main-name">Filters:</span> 
-          <span 
-              class="filter-pop"
-              ng-click="vm.toggleOpenPanel('recipient_countries')" 
-              ng-class="{'active': vm.isOpenedHeader('recipient_countries')}"
-              ng-mouseover="vm.hoverIn('recipient_countries')" 
-              ng-mouseleave="vm.hoverOut('recipient_countries')"
-              ng-show="vm.isIncludedFilter('recipient_countries')">
-            <div 
-              class="glyphicon-popup" 
-              ng-show="vm.buttonTexts['recipient_countries'].hoverShow" 
-              ng-bind-html="vm.currentHoverText"></div>
-            Countries
-          </span>
+        <div class="col-md-12 filters">
 
-          <!-- <span 
-              class="fa-stack fa-lg" 
-              ng-click="vm.toggleOpenPanel('recipient_regions')" 
-              ng-class="{'active': vm.isOpenedHeader('recipient_regions')}"
-              ng-mouseover="vm.hoverIn('recipient_regions')" 
-              ng-mouseleave="vm.hoverOut('recipient_regions')"
-              ng-show="vm.isIncludedFilter('recipient_regions')">
+          <span class="filter-main-name">Filters:</span> 
+            <span 
+                class="filter-pop"
+                ng-click="vm.toggleOpenPanel('recipient_countries')" 
+                ng-class="{'active': vm.isOpenedHeader('recipient_countries')}"
+                ng-mouseover="vm.hoverIn('recipient_countries')" 
+                ng-mouseleave="vm.hoverOut('recipient_countries')"
+                ng-show="vm.isIncludedFilter('recipient_countries')">
               <div 
-                  class="glyphicon-popup" 
-                  ng-show="vm.buttonTexts['recipient_regions'].hoverShow" 
-                  ng-bind-html="vm.currentHoverText"></div>
+                class="glyphicon-popup" 
+                ng-show="vm.buttonTexts['recipient_countries'].hoverShow" 
+                ng-bind-html="vm.currentHoverText"></div>
+              Countries
+            </span>
 
-            <i class="fa fa-circle fa-stack-2x"></i>
-            <i class="fa fa-map-marker fa-stack-1x fa-inverse"></i>
-          </span> -->
-          <span 
-              class="filter-pop"
-              ng-click="vm.toggleOpenPanel('budget')" 
-              ng-class="{'active': vm.isOpenedHeader('budget')}"
-              ng-mouseover="vm.hoverIn('recipient_budget')" 
-              ng-mouseleave="vm.hoverOut('recipient_budget')"
-              ng-show="vm.isIncludedFilter('recipient_budget')">
-            <div 
-              class="glyphicon-popup" 
-              ng-show="vm.buttonTexts['recipient_budget'].hoverShow" 
-              ng-bind-html="vm.currentHoverText"></div>
-            Budget
-          </span>
-          <span 
-              class="filter-pop"
-              ng-click="vm.toggleOpenPanel('sectors')" 
-              ng-class="{'active': vm.isOpenedHeader('sectors')}"
-              ng-mouseover="vm.hoverIn('recipient_sectors')" 
-              ng-mouseleave="vm.hoverOut('recipient_sectors')"
-              ng-show="vm.isIncludedFilter('recipient_sectors')">
-            <div 
-              class="glyphicon-popup" 
-              ng-show="vm.buttonTexts['recipient_sectors'].hoverShow" 
-              ng-bind-html="vm.currentHoverText"></div>
-            Sectors
-          </span>
-          <span 
-              class="filter-pop"
-              ng-click="vm.toggleOpenPanel('activity_status')" 
-              ng-class="{'active': vm.isOpenedHeader('activity_status')}"
-              ng-mouseover="vm.hoverIn('recipient_activity_status')" 
-              ng-mouseleave="vm.hoverOut('recipient_activity_status')"
-              ng-show="vm.isIncludedFilter('recipient_activity_status')">
-            <div 
-              class="glyphicon-popup" 
-              ng-show="vm.buttonTexts['recipient_activity_status'].hoverShow" 
-              ng-bind-html="vm.currentHoverText"></div>
-            Status
-          </span>
-      
-          <span
-              class="filter-pop"
-              ng-click="vm.toggleOpenPanel('transaction_year')" 
-              ng-class="{'active': vm.isOpenedHeader('transaction_year')}"
-              ng-mouseover="vm.hoverIn('transaction_year')" 
-              ng-mouseleave="vm.hoverOut('transaction_year')"
-              ng-show="vm.isIncludedFilter('transaction_year')">
-            <div 
-              class="glyphicon-popup"
-              ng-show="vm.buttonTexts['transaction_year'].hoverShow" 
-              ng-bind-html="vm.currentHoverText"></div>
-            Time range
-          </span>
+            <!-- <span 
+                class="fa-stack fa-lg" 
+                ng-click="vm.toggleOpenPanel('recipient_regions')" 
+                ng-class="{'active': vm.isOpenedHeader('recipient_regions')}"
+                ng-mouseover="vm.hoverIn('recipient_regions')" 
+                ng-mouseleave="vm.hoverOut('recipient_regions')"
+                ng-show="vm.isIncludedFilter('recipient_regions')">
+                <div 
+                    class="glyphicon-popup" 
+                    ng-show="vm.buttonTexts['recipient_regions'].hoverShow" 
+                    ng-bind-html="vm.currentHoverText"></div>
 
-          <span
-              class="filter-pop"
-              ng-click="vm.toggleOpenPanel('recipient_implementing_organisations')" 
-              ng-class="{'active': vm.isOpenedHeader('recipient_implementing_organisations')}"
-              ng-mouseover="vm.hoverIn('recipient_implementing_organisations')" 
-              ng-mouseleave="vm.hoverOut('recipient_implementing_organisations')"
-              ng-show="vm.isIncludedFilter('recipient_implementing_organisations')">
-            <div 
-              class="glyphicon-popup"
-              ng-show="vm.buttonTexts['recipient_implementing_organisations'].hoverShow" 
-              ng-bind-html="vm.currentHoverText"></div>
-            Implementing organisations
-          </span>
+              <i class="fa fa-circle fa-stack-2x"></i>
+              <i class="fa fa-map-marker fa-stack-1x fa-inverse"></i>
+            </span> -->
+            <span 
+                class="filter-pop"
+                ng-click="vm.toggleOpenPanel('budget')" 
+                ng-class="{'active': vm.isOpenedHeader('budget')}"
+                ng-mouseover="vm.hoverIn('recipient_budget')" 
+                ng-mouseleave="vm.hoverOut('recipient_budget')"
+                ng-show="vm.isIncludedFilter('recipient_budget')">
+              <div 
+                class="glyphicon-popup" 
+                ng-show="vm.buttonTexts['recipient_budget'].hoverShow" 
+                ng-bind-html="vm.currentHoverText"></div>
+              Budget
+            </span>
+            <span 
+                class="filter-pop"
+                ng-click="vm.toggleOpenPanel('sectors')" 
+                ng-class="{'active': vm.isOpenedHeader('sectors')}"
+                ng-mouseover="vm.hoverIn('recipient_sectors')" 
+                ng-mouseleave="vm.hoverOut('recipient_sectors')"
+                ng-show="vm.isIncludedFilter('recipient_sectors')">
+              <div 
+                class="glyphicon-popup" 
+                ng-show="vm.buttonTexts['recipient_sectors'].hoverShow" 
+                ng-bind-html="vm.currentHoverText"></div>
+              Sectors
+            </span>
+            <span 
+                class="filter-pop"
+                ng-click="vm.toggleOpenPanel('activity_status')" 
+                ng-class="{'active': vm.isOpenedHeader('activity_status')}"
+                ng-mouseover="vm.hoverIn('recipient_activity_status')" 
+                ng-mouseleave="vm.hoverOut('recipient_activity_status')"
+                ng-show="vm.isIncludedFilter('recipient_activity_status')">
+              <div 
+                class="glyphicon-popup" 
+                ng-show="vm.buttonTexts['recipient_activity_status'].hoverShow" 
+                ng-bind-html="vm.currentHoverText"></div>
+              Status
+            </span>
+        
+            <span
+                class="filter-pop"
+                ng-click="vm.toggleOpenPanel('transaction_year')" 
+                ng-class="{'active': vm.isOpenedHeader('transaction_year')}"
+                ng-mouseover="vm.hoverIn('transaction_year')" 
+                ng-mouseleave="vm.hoverOut('transaction_year')"
+                ng-show="vm.isIncludedFilter('transaction_year')">
+              <div 
+                class="glyphicon-popup"
+                ng-show="vm.buttonTexts['transaction_year'].hoverShow" 
+                ng-bind-html="vm.currentHoverText"></div>
+              Time range
+            </span>
 
-          <span 
-              class="filter-pop"
-              ng-click="vm.toggleOpenPanel('search')" 
-              ng-class="{'active': vm.isOpenedHeader('search')}"
-              ng-mouseover="vm.hoverIn('search')" 
-              ng-mouseleave="vm.hoverOut('search')"
-              ng-show="vm.isIncludedFilter('search')">
-            <div 
-              class="glyphicon-popup" 
-              ng-show="vm.buttonTexts['search'].hoverShow" 
-              ng-bind-html="vm.currentHoverText"></div>
-            Search
-          </span>
+            <span
+                class="filter-pop"
+                ng-click="vm.toggleOpenPanel('recipient_implementing_organisations')" 
+                ng-class="{'active': vm.isOpenedHeader('recipient_implementing_organisations')}"
+                ng-mouseover="vm.hoverIn('recipient_implementing_organisations')" 
+                ng-mouseleave="vm.hoverOut('recipient_implementing_organisations')"
+                ng-show="vm.isIncludedFilter('recipient_implementing_organisations')">
+              <div 
+                class="glyphicon-popup"
+                ng-show="vm.buttonTexts['recipient_implementing_organisations'].hoverShow" 
+                ng-bind-html="vm.currentHoverText"></div>
+              Implementing organisations
+            </span>
 
-          <span
-            class="filter-pop"
-            ng-mouseover="vm.hoverIn('reset')" 
-            ng-mouseleave="vm.hoverOut('reset')">
-            <div 
-              class="glyphicon-popup" 
-              ng-show="vm.buttonTexts['reset'].hoverShow" 
-              ng-bind-html="vm.currentHoverText"></div>
-            Reset all
-          </span>
+            <span 
+                class="filter-pop"
+                ng-click="vm.toggleOpenPanel('search')" 
+                ng-class="{'active': vm.isOpenedHeader('search')}"
+                ng-mouseover="vm.hoverIn('search')" 
+                ng-mouseleave="vm.hoverOut('search')"
+                ng-show="vm.isIncludedFilter('search')">
+              <div 
+                class="glyphicon-popup" 
+                ng-show="vm.buttonTexts['search'].hoverShow" 
+                ng-bind-html="vm.currentHoverText"></div>
+              Search
+            </span>
+
+            <span
+              class="filter-pop"
+              ng-mouseover="vm.hoverIn('reset')" 
+              ng-mouseleave="vm.hoverOut('reset')">
+              <div 
+                class="glyphicon-popup" 
+                ng-show="vm.buttonTexts['reset'].hoverShow" 
+                ng-bind-html="vm.currentHoverText"></div>
+              Reset all
+            </span>
+
+        </div>
 
       </div>
 
