--- a/templates/countries/country-view-detail.html
+++ b/templates/countries/country-view-detail.html
@@ -11,7 +11,7 @@
         </sub-navbar>
     </div>
 
-    <div ng-show="vm.selectedTab == 'samenvatting'">
+    <div class="content-offset" ng-show="vm.selectedTab == 'samenvatting'">
 
         <div class="container extra">
 
