--- a/templates/filters/filter-panel-search.html
+++ b/templates/filters/filter-panel-search.html
@@ -1,5 +1,5 @@
 <div class="filter-panel">
-<div class="container">
+<div class="extra-padding">
     <div class="row filter-panel-header-wrapper">
         <div class="col-md-6">
             <div class="search-box keywords">
@@ -7,7 +7,7 @@
                     <div class="form-group">
                         <input ng-model="vm.query" class="form-control" placeholder="Enter your query...">
                         <button class="btn-search" type="button" ng-click="vm.save()">
-                            <span class="glyphicon glyphicon-search"></span>
+                            <span class="icon search"></span>
                         </button>
                     </div>
                 </form>
