--- a/templates/pages/pages.html
+++ b/templates/pages/pages.html
@@ -1,25 +1,7 @@
 <div id="main-content" class="about-page container">
 	<div class="row">
         <div class="col-sm-12 col-md-10 col-md-offset-1 col-lg-8 col-lg-offset-2">
-		    <h1>Netherlands Enterprise Agency (Rijksdienst voor Ondernemend Nederland)</h1>
-
-			<div class="row actions padding-bottom-2">
-		    	<div class="col-sm-12 social" style="text-align: left !important;">
-		    		<span class="fa-stack fa-lg">
-				    	<i class="fa fa-circle fa-stack-2x"></i>
-				    	<a ng-click="vm.share('twitter')" class="fa fa-twitter fa-stack-1x fa-inverse"></a>
-				    </span>
-				    <span class="fa-stack fa-lg">
-				    	<i class="fa fa-circle fa-stack-2x"></i>
-				    	<a ng-click="vm.share('linkedin')" class="fa fa-linkedin fa-stack-1x fa-inverse"></a>
-				    </span>
-				    <span class="fa-stack fa-lg">
-				    	<i class="fa fa-circle fa-stack-2x"></i>
-				   		<a ng-click="vm.share('facebook')" class="fa fa-facebook fa-stack-1x fa-inverse"></a>
-				   	</span>
-			   	</div>
-		   	</div>
-
+		    <h1>About RVO open data</h1>
 			<p><strong>Netherlands Enterprise Agency (RVO.nl) encourages entrepreneurs in sustainable, agrarian, innovative and international business. It helps with grants, finding business partners, know-how and compliance with laws and regulations.</strong></p>		
 			<p>The aim is to improve opportunities for entrepreneurs and strengthen their position. The Agency works at the instigation of ministries and the European Union.</p>
 			<p>Netherlands Enterprise Agency is part of the Ministry of Economic Affairs. The organisation has been in existence since 2014 and is the result of a merger between NL Agency and the Dienst Regelingen. Some activities of the Commodities Boards are also included. </p>
