--- a/templates/filters/filter-panel-budget.html
+++ b/templates/filters/filter-panel-budget.html
@@ -1,31 +1,31 @@
 <div class="filter-panel budget">
-	<div class="container">
-	<div class="checkbox">
-		<label class="switch">
-			<input type="checkbox" ng-model="vm.on"><i></i>
-			<span>Select budget</span>
-		</label>
-	</div>
+	<div class="extra-padding">
+		<div class="checkbox">
+			<label class="switch">
+				<input type="checkbox" ng-model="vm.on"><i></i>
+				<span>Select budget</span>
+			</label>
+		</div>
 
-	<div class="slide" ng-class="{ 'active' : vm.on }">	
-		<slider slider-id="time-slider"
-	        ng-model="vm.budgetValue"
-	        value="[100000, 300000]"
-	        min="0"
-	        max="3000000"
-	        step="1"
-	        range="true"
-	        precision="2"
-	        reversed="false"
-	        orientation="horizontal"
-	        handle="round"
-	        enabled="true"
-	        ng-disabled="false"
-	        naturalarrowkeys="false"
-	        selection="before"
-	        tooltip="always">
-		</slider>
-	</div>
-	<button class="btn btn-default btn-openaid btn-save" ng-click="vm.save()">Save</button>
+		<div class="slide" ng-class="{ 'active' : vm.on }">	
+			<slider slider-id="time-slider"
+		        ng-model="vm.budgetValue"
+		        value="[100000, 300000]"
+		        min="0"
+		        max="3000000"
+		        step="1"
+		        range="true"
+		        precision="2"
+		        reversed="false"
+		        orientation="horizontal"
+		        handle="round"
+		        enabled="true"
+		        ng-disabled="false"
+		        naturalarrowkeys="false"
+		        selection="before"
+		        tooltip="always">
+			</slider>
+		</div>
+		<button class="btn btn-default btn-openaid btn-save" ng-click="vm.save()">Save</button>
 	</div>
  </div>
