--- a/templates/filters/filter-panel-recipient-countries.html
+++ b/templates/filters/filter-panel-recipient-countries.html
@@ -1,12 +1,12 @@
 <div class="filter-panel">
-<div class="container">
+<div class="extra-padding">
 	<div class="row filter-panel-header-wrapper">
 		<div class="col-md-4">
 			<div class="search-box">
 			    <div class="form-group">
 			        <input ng-model="vm.q" class="form-control" placeholder="Search by country name..">
 			        <button class="btn-search" type="button">
-			            <span class="glyphicon glyphicon-search"></span>
+			            <span class="icon search"></span>
 			        </button>
 		        </div>
 			</div>
