--- a/templates/filters/filter-panel-sectors.html
+++ b/templates/filters/filter-panel-sectors.html
@@ -1,5 +1,5 @@
 <div class="filter-panel">
-<div class="container">
+<div class="extra-padding">
 	<div class="row filter-panel-header-wrapper">
 
 		<div class="col-md-4">
@@ -7,7 +7,7 @@
 			    <div class="form-group">
 			        <input ng-model="vm.q" class="form-control" placeholder="Search by sector name..">
 			        <button class="btn-search" type="button">
-			            <span class="glyphicon glyphicon-search"></span>
+			            <span class="icon search"></span>
 			        </button>
 		        </div>
 			</div>
