--- a/templates/filters/filter-panel-transaction-year.html
+++ b/templates/filters/filter-panel-transaction-year.html
@@ -1,5 +1,5 @@
 <div class="filter-panel budget">
-<div class="container">
+<div class="extra-padding">
 	<div class="checkbox">
 		<label class="switch">
 			<input type="checkbox" ng-model="vm.on"><i></i>
