--- a/templates/filters/filter-selection-box.html
+++ b/templates/filters/filter-selection-box.html
@@ -1,5 +1,5 @@
 <div class="filter-selected" ng-show="vm.filterSelection.selectionString.length">
-	<div class="container">
+	<div class="container extra">
 		<div class="row">
 			<div class="col-sm-12">
 				<div class="filter-box">
