--- a/templates/implementingOrganisations/implementing-organisations-list.html
+++ b/templates/implementingOrganisations/implementing-organisations-list.html
@@ -1,56 +1,67 @@
 <div class="container list-view-wrapper">
     <div class="row">
-
         <div class="col-md-12">
             <div class="sort">
-                <div class="row">
-                    <div class="col-xs-8">
-                        {{vm.totalOrganisations}} results
-                    </div>
-                    <div class="col-xs-4 text-right-not-xs">
-                        <label class="wrapper">
-                          <div class="custom-select ff-hack">
-                            <select
-                              ng-model="vm.order_by"
-                              ng-change="vm.toggleOrder()">
-                              <option value="">Sort by...</option>
-                              <option value="name">Name (A - Z)</option>
-                              <option value="-name">Name (Z - A)</option>
-                              <option value="total_disbursements">Expenditure (increasing)</option>
-                              <option value="-total_disbursements">Expenditure (decreasing)</option>
-                            </select>
-                          </div>
-                        </label>
-                    </div>
+                <span class="sort-by">Sort by: </span>
+                <div class="custom-select ff-hack">
+                    <select
+                        ng-model="vm.order_by"
+                        ng-change="vm.toggleOrder()">
+                        <option value="">Sort by...</option>
+                        <option value="name">Name (A - Z)</option>
+                        <option value="-name">Name (Z - A)</option>
+                        <option value="total_disbursements">Expenditure (increasing)</option>
+                        <option value="-total_disbursements">Expenditure (decreasing)</option>
+                    </select>
                 </div>
+                <span class="results">Results: <span class="total">{{vm.totalOrganisations}}</span></span>
             </div>
         </div>
+    </div>
 
-        <div ng-if='vm.totalOrganisations == 0' class="col-sm-12">
-            <div class="hp-block wit">
+    <div ng-if='vm.totalOrganisations == 0' class="row">
+        <div class="col-sm-12">
+            <div class="extra-padding">
                 <h2>Nothing found</h2>
                 <p>Please select some different filters.</p>
             </div>
         </div>
+    </div>
+</div>
 
-        <div class="col-md-12" infinite-scroll='vm.nextPage()' infinite-scroll-disabled='vm.busy' infinite-scroll-distance='1'>
-            <div class="activity-list-item" 
-                ng-show="vm.organisations.length != 0"
-                ng-repeat="item in vm.organisations">
-                <div class="hp-block wit">
-                    <div class="row">
-                        <div class="col-sm-4">
-                            <h3 class="no-margin"><a ui-sref="organisation({ organisation_id: item.receiver_organisation_id })">{{ item.name }}</a></h3>
-                        </div>
-                        <div class="col-sm-4">
-                            <h3 class="no-margin">{{item.total_disbursements  | shortcurrency :'€'}}</h3>
-                        </div>
-                        <div class="col-sm-4">
-                            <h3 class="no-margin">{{item.activity_count}} projects</h3>
-                        </div>
-                    </div>
+<div class="row" infinite-scroll='vm.nextPage()' infinite-scroll-disabled='vm.busy' infinite-scroll-distance='1'>
+    <div class="activity-list-item col-sm-12">
+        <div class="panel no-margin-bottom">
+            <div class="row">
+                <div class="col-sm-6">
+                    <h4 class="no-margin">Organisation</h4>
+                </div>
+                <div class="col-sm-3">
+                    <h4 class="no-margin">Total budget</h4>
+                </div>
+                <div class="col-sm-3">
+                    <h4 class="no-margin">Total projects</h4>
                 </div>
             </div>
         </div>
     </div>
+
+    <div class="activity-list-item col-sm-12 sectors" 
+        ng-show="vm.organisations.length != 0"
+        ng-repeat="item in vm.organisations">
+        <div class="panel">
+            <div class="row">
+                <div class="col-sm-6">
+                    <h3 class="no-margin"><a ui-sref="organisation({ organisation_id: item.receiver_organisation_id })">{{ item.name }}</a></h3>
+                </div>
+                <div class="col-sm-3">
+                    <h3 class="no-margin">{{item.total_disbursements  | shortcurrency :'€'}}</h3>
+                </div>
+                <div class="col-sm-3">
+                    <h3 class="no-margin">{{item.activity_count}} projects</h3>
+                </div>
+            </div>
+        </div>
+    </div>
+
 </div>
