--- a/templates/sectors/sectors-list.html
+++ b/templates/sectors/sectors-list.html
@@ -1,31 +1,41 @@
 <script type="text/ng-template" id="tree">
-    <div ng-if="item.children" class="hp-block wit parent collapsed">
+    <div ng-if="item.children" class="panel parent collapsed">
         <div class="row">
-            <div class="col-sm-4">
-                <h3 class="no-margin left-pad">
-                    <span class="expandme" ng-click="vm.toggleHideChildren($event)"></span>
-                    <a ui-sref="sector({ sector_id: item.sector_id })">{{ item.name }}</a>
-                    </h3>
+            <div class="col-xs-1">
+                <span class="expandme" ng-click="vm.toggleHideChildren($event)"></span>
             </div>
-            <div class="col-sm-4">
-                <h3 class="no-margin">{{item.total_disbursements  | shortcurrency :'€'}}</h3>
-            </div>
-            <div class="col-sm-4">
-                <h3 class="no-margin">{{item.activity_count || 0}} projects</h3>
+            <div class="col-xs-11">
+                <div class="row">
+                    <div class="col-sm-6">
+                        <h3 class="no-margin">
+                            <a ui-sref="sector({ sector_id: item.sector_id })">{{ item.name }}</a>
+                        </h3>
+                    </div>
+                    <div class="col-sm-3">
+                        <h3 class="no-margin">{{item.total_disbursements  | shortcurrency :'€'}}</h3>
+                    </div>
+                    <div class="col-sm-3">
+                        <h3 class="no-margin">{{item.activity_count || 0}} projects</h3>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
 
-    <div ng-if="!item.children" class="hp-block wit">
-        <div class="row">
-            <div class="col-sm-4">
-                <h3 class="no-margin left-pad"><a ui-sref="sector({ sector_id: item.sector_id })">{{ item.name }}</a></h3>
-            </div>
-            <div class="col-sm-4">
-                <h3 class="no-margin">{{item.total_disbursements  | shortcurrency :'€'}}</h3>
-            </div>
-            <div class="col-sm-4">
-                <h3 class="no-margin">{{item.activity_count || 0}} projects</h3>
+    <div ng-if="!item.children" class="panel">
+        <div class="row ">
+            <div class="col-xs-11 col-xs-offset-1">
+                <div class="row">
+                    <div class="col-sm-6">
+                        <h3 class="no-margin"><a ui-sref="sector({ sector_id: item.sector_id })">{{ item.name }}</a></h3>
+                    </div>
+                    <div class="col-sm-3">
+                        <h3 class="no-margin">{{item.total_disbursements  | shortcurrency :'€'}}</h3>
+                    </div>
+                    <div class="col-sm-3">
+                        <h3 class="no-margin">{{item.activity_count || 0}} projects</h3>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
@@ -35,63 +45,61 @@
     </div>    
 </script>
 
+
 <div class="container list-view-wrapper">
     <div class="row">
         <div class="col-md-12">
             <div class="sort">
-                <div class="row">
-                    <div class="col-xs-8">
-                        {{vm.totalSectors}} results
-                    </div>
-                    <div class="col-xs-4 text-right-not-xs">
-                        <label class="wrapper">
-                          <div class="custom-select ff-hack">
-                            <select
-                              ng-model="vm.order_by"
-                              ng-change="vm.toggleOrder()">
-                              <option value="">Sort by...</option>
-                              <option value="name">Name (A - Z)</option>
-                              <option value="-name">Name (Z - A)</option>
-                              <option value="total_disbursements">Expenditure (increasing)</option>
-                              <option value="-total_disbursements">Expenditure (decreasing)</option>
-                            </select>
-                          </div>
-                        </label>
-                    </div>
+                <span class="sort-by">Sort by: </span>
+                <div class="custom-select ff-hack">
+                    <select
+                        ng-model="vm.order_by"
+                        ng-change="vm.toggleOrder()">
+                        <option value="">Sort by...</option>
+                        <option value="name">Name (A - Z)</option>
+                        <option value="-name">Name (Z - A)</option>
+                        <option value="total_disbursements">Expenditure (increasing)</option>
+                        <option value="-total_disbursements">Expenditure (decreasing)</option>
+                    </select>
                 </div>
+                <span class="results">Results: <span class="total">{{vm.totalSectors}}</span></span>
             </div>
         </div>
+    </div>
 
-        <div ng-if='vm.totalSectors == 0' class="col-sm-12">
-            <div class="hp-block wit">
+    <div ng-if='vm.totalSectors == 0' class="row">
+        <div class="col-sm-12">
+            <div class="extra-padding">
                 <h2>Nothing found</h2>
                 <p>Please select some different filters.</p>
             </div>
         </div>
+    </div>
+</div>
 
-        <div class="col-md-12">
-     <!--        <div class="activity-list-item" 
-                ng-show="vm.sectors.length != 0"
-                ng-repeat="item in vm.sectors">
-                <div class="hp-block wit">
+<div class="row">
+    <div class="col-xs-12 activity-list-item ">
+        <div class="panel no-margin-bottom">
+            <div class="row">
+                <div class="activity-list-item col-xs-11 col-xs-offset-1">
                     <div class="row">
-                        <div class="col-sm-4">
-                            <h3 class="no-margin"><a ui-sref="sector({ sector_id: item.sector_id })">{{ item.name }}</a></h3>
+                        <div class="col-sm-6">
+                            <h4 class="no-margin">Sector</h4>
                         </div>
-                        <div class="col-sm-4">
-                            <h3 class="no-margin">{{item.total_disbursements  | shortcurrency :'€'}}</h3>
+                        <div class="col-sm-3">
+                            <h4 class="no-margin">Total budget</h4>
                         </div>
-                        <div class="col-sm-4">
-                            <h3 class="no-margin">{{item.activity_count}} projects</h3>
+                        <div class="col-sm-3">
+                            <h4 class="no-margin">Total projects</h4>
                         </div>
                     </div>
                 </div>
-            </div> -->
-            <div class="activity-list-item" 
-                ng-show="vm.sectors.length != 0"
-                ng-repeat="item in vm.sectors"
-                ng-include="'tree'">
             </div>
         </div>
     </div>
+</div>
+<div class="sectors activity-list-item" 
+    ng-show="vm.sectors.length != 0"
+    ng-repeat="item in vm.sectors"
+    ng-include="'tree'">
 </div>
