--- a/templates/activities/activity-view-detail.html
+++ b/templates/activities/activity-view-detail.html
@@ -92,10 +92,20 @@
                             </tr>
                         </table>
                     </div>
-                    <div class="panel lightblue">
+                    <div class="panel lightblue share">
                         <h3>Export & share</h3>
                         <hr>
-                        <p>Select the format and download the data for this project</p>
+                        <p class="no-margin-bottom">Download the project data</p>
+                        <p>
+                            <a ng-click="vm.download('json')"><i class="icon download"></i>JSON</a>
+                        </p>
+                        <p class="no-margin-bottom">Share this project</p>
+                        <p class="two-columns">
+                            <a target="_blank" ng-href="http://twitter.com/home?status={{vm.shareDescription}}"><i class="icon twitter"></i>Twitter</a>
+                            <a target="_blank" ng-href="http://www.facebook.com/sharer/sharer.php?s=100&p[url]={{vm.pageUrl}}"><i class="icon facebook"></i>Facebook</a>
+                            <a target="_blank" ng-href="http://www.linkedin.com/shareArticle?mini=true&url={{vm.pageUrl}}&title={{vm.shareDescription}}"><i class="icon linkedin"></i>LinkedIn</a>
+                            <a href=""><i class="icon email"></i>Email</a>
+                        </p>
                     </div>
                     <div class="panel lightblue">
                         <h3>Sector tags</h3>
@@ -152,10 +162,10 @@
                 </div>
                 <div class="panel xlightblue no-margin-bottom">
                     <div class="row">
-                        <div class="col-sm-3">
+                        <div class="col-sm-4">
                             IATI Identifier
                         </div>
-                        <div class="col-sm-9">
+                        <div class="col-sm-8">
                             {{vm.activity.iati_identifier}}
                         </div>
                     </div>
@@ -170,60 +180,60 @@
                 <div class="wrap-alternate">
                     <div class="panel no-margin-bottom">
                         <div class="row">
-                            <div class="col-sm-3">
+                            <div class="col-sm-4">
                                 Activity status
                             </div>
-                            <div class="col-sm-9">
-                                {{vm.activity.iati_identifier}}
+                            <div class="col-sm-8">
+                                {{vm.activity.activity_status.name}}
                             </div>
                         </div>
                     </div>
                     <div class="panel no-margin-bottom">
                         <div class="row">
-                            <div class="col-sm-3">
+                            <div class="col-sm-4">
                                 Activity date
                             </div>
-                            <div class="col-sm-9">
+                            <div class="col-sm-8">
                                 {{vm.activity.iati_identifier}}
                             </div>
                         </div>
                     </div>
                     <div class="panel no-margin-bottom">
                         <div class="row">
-                            <div class="col-sm-3">
+                            <div class="col-sm-4">
                                 Participating organisation
                             </div>
-                            <div class="col-sm-9">
-                                {{vm.activity.iati_identifier}}
+                            <div class="col-sm-8">
+                                <span ng-repeat='org in vm.activity.participating_organisations'>{{org.name}},</span>
                             </div>
                         </div>
                     </div>
                     <div class="panel no-margin-bottom">
                         <div class="row">
-                            <div class="col-sm-3">
+                            <div class="col-sm-4">
                                 Recipient country
                             </div>
-                            <div class="col-sm-9">
-                                {{vm.activity.iati_identifier}}
+                            <div class="col-sm-8">
+                                <a ng-repeat="country in vm.activity.countries" ui-sref="country({ country_id: country.code })">{{country.name}}</a><span ng-if='vm.activity.countries.length == 0'>No data available</span>
                             </div>
                         </div>
                     </div>
                     <div class="panel no-margin-bottom">
                         <div class="row">
-                            <div class="col-sm-3">
+                            <div class="col-sm-4">
                                 Sector
                             </div>
-                            <div class="col-sm-9">
-                                {{vm.activity.iati_identifier}}
+                            <div class="col-sm-8">
+                                <a ui-sref="sector({'sector_id': sector.code})" ng-repeat="(key, sector) in vm.activity.sectors">{{ sector.name }}, </a><span ng-show='!vm.activity.sectors.length'>No data available</span>
                             </div>
                         </div>
                     </div>
                     <div class="panel">
                         <div class="row">
-                            <div class="col-sm-3">
+                            <div class="col-sm-4">
                                 Default finance type
                             </div>
-                            <div class="col-sm-9">
+                            <div class="col-sm-8">
                                 {{vm.activity.iati_identifier}}
                             </div>
                         </div>
@@ -236,50 +246,50 @@
                 <div class="wrap-alternate">
                     <div class="panel no-margin-bottom">
                         <div class="row">
-                            <div class="col-sm-3">
+                            <div class="col-sm-4">
                                 Provider organisation
                             </div>
-                            <div class="col-sm-9">
+                            <div class="col-sm-8">
                                 {{vm.activity.iati_identifier}}
                             </div>
                         </div>
                     </div>
                     <div class="panel no-margin-bottom">
                         <div class="row">
-                            <div class="col-sm-3">
+                            <div class="col-sm-4">
                                 Receiver organisation
                             </div>
-                            <div class="col-sm-9">
+                            <div class="col-sm-8">
                                 {{vm.activity.iati_identifier}}
                             </div>
                         </div>
                     </div>
                     <div class="panel no-margin-bottom">
                         <div class="row">
-                            <div class="col-sm-3">
+                            <div class="col-sm-4">
                                 Value
                             </div>
-                            <div class="col-sm-9">
+                            <div class="col-sm-8">
                                 {{vm.activity.iati_identifier}}
                             </div>
                         </div>
                     </div>
                     <div class="panel no-margin-bottom">
                         <div class="row">
-                            <div class="col-sm-3">
+                            <div class="col-sm-4">
                                 Transaction date
                             </div>
-                            <div class="col-sm-9">
+                            <div class="col-sm-8">
                                 {{vm.activity.iati_identifier}}
                             </div>
                         </div>
                     </div>
                     <div class="panel no-margin-bottom">
                         <div class="row">
-                            <div class="col-sm-3">
+                            <div class="col-sm-4">
                                 Transaction type
                             </div>
-                            <div class="col-sm-9">
+                            <div class="col-sm-8">
                                 {{vm.activity.iati_identifier}}
                             </div>
                         </div>
@@ -288,10 +298,20 @@
 
             </div>
             <div class="col-md-4">
-               <div class="panel lightblue">
+                <div class="panel lightblue share">
                     <h3>Export & share</h3>
                     <hr>
-                    <p>Select the format and download the data for this project</p>
+                    <p class="no-margin-bottom">Download the project data</p>
+                    <p>
+                        <a ng-click="vm.download('json')"><i class="icon download"></i>JSON</a>
+                    </p>
+                    <p class="no-margin-bottom">Share this project</p>
+                    <p class="two-columns">
+                        <a target="_blank" ng-href="http://twitter.com/home?status={{vm.shareDescription}}"><i class="icon twitter"></i>Twitter</a>
+                        <a target="_blank" ng-href="http://www.facebook.com/sharer/sharer.php?s=100&p[url]={{vm.pageUrl}}"><i class="icon facebook"></i>Facebook</a>
+                        <a target="_blank" ng-href="http://www.linkedin.com/shareArticle?mini=true&url={{vm.pageUrl}}&title={{vm.shareDescription}}"><i class="icon linkedin"></i>LinkedIn</a>
+                        <a href=""><i class="icon email"></i>Email</a>
+                    </p>
                 </div>
             </div>
         </div>
