--- a/templates/_layout/navbar.html
+++ b/templates/_layout/navbar.html
@@ -18,6 +18,9 @@
         <li  
           ng-class="{'active': vm.stateName == 'activities'}">
           <a ng-class="{'active': vm.stateName == 'activities'}"  ui-sref="activities">Projects</a></li>
+        <li  
+          ng-class="{'active': vm.stateName == 'programmes'}">
+          <a ng-class="{'active': vm.stateName == 'programmes'}"  ui-sref="programmes">Programmes</a></li>
         <li 
           ng-class="{'active': vm.stateName == 'locations'}">
           <a ng-class="{'active': vm.stateName == 'locations'}"  ui-sref="locations-map">Countries</a></li>
