--- a/templates/_partials/filterbar/filter-bar.html
+++ b/templates/_partials/filterbar/filter-bar.html
@@ -124,6 +124,7 @@
 
             <span
               class="filter-pop"
+              ng-click="vm.resetFilters()" 
               ng-mouseover="vm.hoverIn('reset')" 
               ng-mouseleave="vm.hoverOut('reset')">
               <div 
