--- a/templates/regions/region-list.html
+++ b/templates/regions/region-list.html
@@ -77,31 +77,31 @@
         </div>
     </div>
 </div>
-
-<div class="row">
-    <div class="col-xs-12 activity-list-item ">
-        <div class="panel no-margin-bottom">
-            <div class="row">
-                <div class="activity-list-item col-xs-11 col-xs-offset-1">
-                    <div class="row">
-                        <div class="col-sm-6">
-                            <h4 class="no-margin">Region</h4>
-                        </div>
-                        <div class="col-sm-3">
-                            <h4 class="no-margin">Total budget</h4>
-                        </div>
-                        <div class="col-sm-3">
-                            <h4 class="no-margin">Total projects</h4>
+<div ng-show="vm.regions.length != 0">
+    <div class="row">
+        <div class="col-xs-12 activity-list-item ">
+            <div class="panel no-margin-bottom">
+                <div class="row">
+                    <div class="activity-list-item col-xs-11 col-xs-offset-1">
+                        <div class="row">
+                            <div class="col-sm-6">
+                                <h4 class="no-margin">Region</h4>
+                            </div>
+                            <div class="col-sm-3">
+                                <h4 class="no-margin">Total budget</h4>
+                            </div>
+                            <div class="col-sm-3">
+                                <h4 class="no-margin">Total projects</h4>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
 
-<div class="sectors activity-list-item" 
-    ng-show="vm.regions.length != 0"
-    ng-repeat="item in vm.regions"
-    ng-include="'tree'">
+    <div class="sectors activity-list-item" 
+        ng-repeat="item in vm.regions"
+        ng-include="'tree'">
+    </div>
 </div>
